# cmw

./: .clangd  .gitignore  CLAUDE.md  GEMINI.md  README.md  state.h
Tutorial/: course_outline_30_lessons.md  learning_guide.md  lesson_01_什么是中间件以及为什么学习这个仓库.md  lesson_02_仓库结构总览与模块地图.md  lesson_03_C++中间件代码应该怎么读.md  lesson_04_搭建学习环境与验证路径.md  lesson_05_中间件开发需要的C++基础视角.md  lesson_06_内存对象与资源管理.md  lesson_07_并发基础导论.md  lesson_08_数据结构与缓存友好性.md  lesson_09_模块接口设计与边界意识.md  lesson_10_base模块总览.md  lesson_11_原子操作与无锁思维入门.md  lesson_12_读写锁设计与atomic_rw_lock.md  lesson_13_有界队列与生产者消费者模型.md  lesson_14_线程池设计思想.md  lesson_15_对象池与资源复用.md  lesson_16_基础组件协作关系总结.md  lesson_17_为什么中间件必须重视序列化.md  lesson_18_serialize模块总览.md  lesson_19_DataStream的核心状态_缓冲区位置与字节序.md  lesson_20_基本类型序列化的统一模式.md  lesson_21_DataStream_如何序列化字符串.md  lesson_22_序列化模块阶段总结与小实践.md
base/: atmoic_hash_map.h  atomic_rw_lock.h  bounded_queue.h  concurrent_object_pool.h  for_each.h  macros.h  object_pool.h  rw_lock_guard.h  signal.h  thread_pool.h  unbounded_queue.h  wait_strategy.h
base/test/: CMakeLists.txt  cli.txt
base/test/src/: test01.cpp  test02.cpp  this_test.cpp
common/: file.h  log.h  macros.h  util.h
config/: RoleAttributes.h  cmw_conf.h
doc/: fastrtps.md  serialize.md  topology.md  transport.md
event/: perf_event_cache.h
example/: Makefile  test_serialize.cpp
log/: logstream.h
markdown/: Explain Bounded Queue Code.md
note/: Analyzing Atomic Hash Map Insert.md
scheduler/: processor.cpp
serialize/: data_stream.cpp  data_stream.h  serializable.h
time/: time.h
transport/: transport.cpp  transport.h
(+21 files in other folders)
